examples/errors/computeLayer/DuplicatePatternBinder.bkf
layer foo:
| a a => [] -- a is bound twice here
| a other _ *a => [] -- also occurs with rest binders
